🏳️‍🌈 - Consolerizer - Migration - RED, GREEN, BLUE, BRIGHT_CYAN 🟥 🟩 🟦 🐬